src/objects/Promotion_Gift__c.object
<CustomObject>
    <fields>
        <fullName>Balance_Quantity_New__c</fullName>
        <formula>Gift_Inventory__c - Gift_Issued_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Quantity__c</fullName>
        <description>System calculated. This is to display the number of gifts available:
Balance Qty = Gift Inventory – Gift Issued</description>
        <formula>Gift_Inventory__c  -  Gift_Issued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Quantity Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Inventory__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Inventory level of the gift for the promotion.</description>
        <label>Promotion Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Issued_New__c</fullName>
        <label>Ordered Quantity</label>
        <summarizedField>Order_Line_Item_Gift__c.Order_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Line_Item_Gift__c.Hidden_Status__c</field>
            <operation>equals</operation>
            <value>Close, Provisioning</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line_Item_Gift__c.Promotion_Gift__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gift_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count for the gift that has been issued to the customer via an order.</description>
        <label>Gift Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Redeemed_New__c</fullName>
        <label>Redeemed Quantity</label>
        <summarizedField>Order_Line_Item_Gift__c.Redemption_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Line_Item_Gift__c.Hidden_Status__c</field>
            <operation>equals</operation>
            <value>Close, Provisioning</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line_Item_Gift__c.Promotion_Gift__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gift_Redeemed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count for the gift that has been issued based on the order gift redemption status.</description>
        <label>Gift Redeemed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <formula>TEXT(Gift__r.Gift_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Promotion Gifts</relationshipLabel>
        <relationshipName>Promotion_Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Gifts</relationshipLabel>
        <relationshipName>Promotion_Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redemption_End_Date__c</fullName>
        <description>This field is to specify the last date when a customer can redeem his gift from the redemption center.</description>
        <label>Redemption End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Redemption_Letter_Details__c</fullName>
        <description>This field is to specify the text within the letter to be sent to the customer. This includes the redemption venue details.</description>
        <label>Redemption Letter Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Redemption_Start_Date__c</fullName>
        <description>This field is to specify the start date from when a customer can start redeeming his gift from the redemption center.</description>
        <label>Redemption Start Date</label>
        <type>Date</type>
    </fields>
    <label>Promotion Gift</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Gift__c</columns>
        <columns>NAME</columns>
        <columns>Gift_Issued__c</columns>
        <columns>Promotion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gift_Type__c</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PG-{00000000}</displayFormat>
        <label>Promotion Gift Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>